# MOD16-fET

./: README.md  pyproject.toml  setup.cfg
mod16fet/: __init__.py  calibration.py  utils.py
mod16fet/data/: MOD16_BPLUT_C7.0_Endsley_et_al_2025.csv  MOD16_BPLUT_C7.0_Endsley_et_al_2025_for_MOD16-fET.csv  MOD16_BPLUT_prior_20251113.yaml  MOD16_calibration_config.yaml
tests/: tests.py
