[metadata]
name = mod16
version = attr: mod16fet.__version__
author = K. Arthur Endsley
author_email = arthur.endsley@ntsg.umt.edu
description = Python tools for MOD16 algorithm
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = mod16fet
py_modules = mod16fet.utils, mod16fet.calibration
python_requires = >=3.10.0
include_package_data = False

[options.package_data]
* = data/*.csv
